Prevent aboutme from being too wide

--- a/components/homepage/AboutMe/AboutMe.module.scss
+++ b/components/homepage/AboutMe/AboutMe.module.scss
@@ -7,6 +7,7 @@
 
 .description {
 	width: 80%;
+	max-width: 1000px;
 	font-family: Overpass, serif;
 	font-weight: 200;
 	font-size: 1.2em;
